# foot-ruler

./: .gitignore  Readme.md  __main__.py  board_coords.json  calibrate.py  main.py  make_masks.py  measure.py  pyproject.toml  requirements.txt  toe-board-measure.lss  train_seg.py  watch.py  watcher.py
Jumps Shoes.v3i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
Jumps Shoes.v3i.yolov8/test/labels/: 1_26-4-1__id_166_att_2_tod_13-54-18-191__toe_board_jpg.rf.9b651c76c4983aefa93596e821e75c95.txt  1_26-4-1__id_351_att_1_tod_13-37-51-379__toe_board_jpg.rf.8c80088c021e921e6f61154190d051c3.txt  1_26-4-1__id_354_att_2_tod_13-45-19-900__toe_board_jpg.rf.75e0c7310d3b2d5d712963d5d1dbe858.txt  1_26-4-1__id_89_att_2_tod_13-46-04-837__toe_board_jpg.rf.6c05c2560b909bf9a539804f015abb50.txt  1_27-2-1__id_263_att_3_tod_11-03-45-926__toe_board_jpg.rf.9de3fd731daa863d84baff865b69a3d7.txt  1_30-1-1__id_137_att_1_tod_15-09-26-905__toe_board_jpg.rf.cada4d4cc213084abe752b4006548af8.txt  1_30-1-1__id_152_att_3_tod_15-21-02-723__toe_board_jpg.rf.2d6c09414adb2b0917cc2806f7710eb6.txt  1_30-1-1__id_155_att_2_tod_15-16-50-126__toe_board_jpg.rf.05656e4e4123c372f3fc64ec2ce49fd3.txt  1_30-1-1__id_192_att_2_tod_15-14-31-064__toe_board_jpg.rf.52009154db69eda062f81ef62c5816b5.txt  1_30-1-2__id_157_att_2_tod_16-03-52-720__toe_board_jpg.rf.bd884c8844af34a583f327d9628d455d.txt  1_30-1-2__id_298_att_2_tod_16-04-44-587__toe_board_jpg.rf.94ce031bb00a0cb31a0bb78e1cadc998.txt  1_30-1-2__id_348_att_2_tod_16-00-57-725__toe_board_jpg.rf.674c213c5f682f146c7dada1de7cd890.txt  (+155 more)
js/: package.json
(+1602 files in other folders)
